# qrcode_cppmulti

./: CMakeLists.txt  install_requirements.sh  main.cpp
